--- a/frame_image_proc/CMakeLists.txt
+++ b/frame_image_proc/CMakeLists.txt
@@ -16,7 +16,8 @@ include(${dynamic_reconfigure_PACKAGE_PATH}/cmake/cfgbuild.cmake)
 gencfg()
 
 # Nodelet library
-rosbuild_add_library(frame_image_proc src/libframe_image_proc/processor.cpp src/nodelets/disparity.cpp src/nodelets/point_cloud2.cpp src/nodelets/point_cloud.cpp)
+rosbuild_add_library(frame_image_proc src/libframe_image_proc/processor.cpp
+    src/libframe_image_proc/matcher.cpp src/nodelets/disparity.cpp src/nodelets/point_cloud2.cpp src/nodelets/point_cloud.cpp)
 
 # Standalone node
 rosbuild_add_executable(frameimageproc_exe src/nodes/frame_image_proc.cpp)
