--- a/posest/CMakeLists.txt
+++ b/posest/CMakeLists.txt
@@ -65,6 +65,7 @@ target_link_libraries(test/run_sequence posest )
 
 rosbuild_add_library(esm src/esm.cpp)
 rosbuild_add_compile_flags(esm ${SSE_FLAGS})
+rosbuild_add_openmp_flags(esm)
 
 rosbuild_add_executable(test/run_esm test/run_esm.cpp)
 target_link_libraries(test/run_esm esm )
